<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">天天回收</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="immediate_experience">即刻体验</string>
    
    <string name="hello">Hello World, MainTabActivity!</string>
    <string name="main_my">我的</string>
    <string name="main_home">首页</string>
    <string name="more">更多</string>
    <string name="main_manage_date">时间</string>
    <string name="main_friends">好友</string>
    
   <string name="shouye_tou">天天回收</string>
	<string name="shouye_name">请输入账号</string>
	<string name="shouye_passwd">请输入密码</string>
	<string name="shouye_denglu">登陆</string>
	<string name="shouye_zhuce">注册</string>
	<string name="shouye_wangji">忘记密码？</string>
	
	<string name="recycle_diqu">北京</string>
	<string name="recycle_wode">我的</string> 
	<string name="recycle_wodedingdan">我的订单</string> 
	<string name="recycle_jiage">价格</string> 
	<string name="recycle_ingdanxiangqing">订单详情</string> 
	
	<string name="recycle_shouji">手机</string>
	<string name="recycle_jiuyifu">旧衣服</string>
	<string name="recycle_suliaoping">塑料瓶</string>	
	<string name="recycle_yilaguan">易拉罐</string>
	<string name="recycle_zhilei">纸类</string>
	<string name="recycle_dianzi">电子设备</string>
	<string name="recycle_jiadian">家电</string>	
	<string name="recycle_qita">其他</string>
	
	<string name="mine_tianjiadizhi">添加地址</string>
	<string name="mine_yuyue">预约</string>

</resources>
