<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F0F0F0"
    android:orientation="vertical" >
  <RelativeLayout
        android:id="@+id/tou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        >       
    <!-- 
   <TextView
        android:id="@+id/bangdingshebeitu"
        android:layout_alignParentLeft="true" 
        android:layout_marginLeft="6dip"
        android:text="@string/recycle_diqu" 
        android:textSize="18sp"
        android:textColor="#EEEE00"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerVertical="true"-->
      
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dip"
        android:layout_marginBottom="6dip"
        android:text="@string/shouye_tou" 
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#73bf00"
        android:layout_centerInParent="true"
		android:gravity="center"		 
        />    
        <!-- android:textColor="#7FFF00" -->
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/zoumadeng"
        android:layout_below="@id/tou"
        android:layout_centerInParent="true"
        android:layout_width="fill_parent"
        android:layout_height="160dip" >

        <android.support.v4.view.ViewPager
            android:id="@+id/vp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:layout_gravity="bottom"
            android:background="#00000000"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#ffffff" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:gravity="center" >
                <View
                    android:id="@+id/v_dot0"
                    style="@style/dot_style"
                    android:background="@drawable/dot_focused" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
          android:id="@+id/tubiaolan1"
          android:layout_alignParentLeft="true"
          android:layout_alignParentRight="true"
          android:layout_marginRight="15dip"
          android:layout_marginLeft="15dip"
          android:layout_width="wrap_content"
          android:layout_below="@id/zoumadeng"
		  android:layout_height="80dip"
		  android:layout_marginTop="20dip"
		  android:background="#F0F0F0"
		  android:orientation="horizontal"
        > 
	 	<RelativeLayout
	 	   android:id="@+id/jiuyifuR"
           android:layout_width="0dp"
           android:layout_height="fill_parent"
           android:background="#F0F0F0"
           android:layout_weight="1" >
	        <ImageView
	        		android:id="@+id/jiuyifu"
	        		android:layout_centerHorizontal="true"
	        		android:layout_alignParentTop="true"
	        		android:layout_width="50dip"
	        		android:layout_height="50dip"
		    		android:background="@drawable/jiuyifu_lv"
		 	/>  
		 	<TextView
	        android:text="@string/recycle_jiuyifu" 
	        android:layout_centerHorizontal="true"
	        android:layout_below="@id/jiuyifu"
	        android:textSize="15sp"
	        android:textColor="#109200"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	 		/> 
	 	</RelativeLayout>
	   <RelativeLayout
	       android:id="@+id/suliaopingR"
           android:layout_width="0dp"
           android:layout_height="fill_parent"
           android:background="#F0F0F0"
           android:layout_weight="1" >
		 	<ImageView
	        		android:id="@+id/suliaoping"
	        		android:layout_centerHorizontal="true"
	        		android:layout_alignParentTop="true"
	        		android:layout_width="50dip"
		    		android:layout_height="50dip"
		    		android:background="@drawable/suliaoping_lv"
		 	/>   
		  <TextView
	        android:text="@string/recycle_suliaoping" 
	        android:layout_centerHorizontal="true"
	        android:layout_below="@id/suliaoping"
	        android:textSize="15sp"
	        android:textColor="#109200"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	 		/> 
	 	</RelativeLayout>
	 	<RelativeLayout
	 	    android:id="@+id/yilaguanR"
           android:layout_width="0dp"
           android:layout_height="fill_parent"
           android:background="#F0F0F0"
           android:layout_weight="1" >
		 	<ImageView
	        		android:id="@+id/yilaguan"
	        		android:layout_centerHorizontal="true"
	        		android:layout_alignParentTop="true"
	        		android:layout_width="50dip"
	        		android:layout_height="50dip"
		    		android:background="@drawable/yilaguan_lv"
		 	/>   
		 <TextView
	        android:text="@string/recycle_yilaguan" 
	        android:layout_centerHorizontal="true"
	        android:layout_below="@id/yilaguan"
	        android:textSize="15sp"
	        android:textColor="#109200"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	 	/> 
	 	</RelativeLayout>
       </LinearLayout>
    <LinearLayout
          android:id="@+id/tubiaolan2"
          android:layout_alignParentLeft="true"
          android:layout_alignParentRight="true"
          android:layout_marginRight="15dip"
          android:layout_marginLeft="15dip"
          android:layout_width="wrap_content"
          android:layout_below="@id/tubiaolan1"
		  android:layout_height="80dip"
		  android:layout_marginTop="8dip"
		  android:background="#F0F0F0"
		  android:orientation="horizontal"
        > 
       <RelativeLayout
           android:id="@+id/zhiR"
           android:layout_width="0dp"
           android:layout_height="fill_parent"
           android:background="#F0F0F0"
           android:layout_weight="1" >
	       <ImageView
	        		android:id="@+id/zhi"
	        		android:layout_centerHorizontal="true"
	        		android:layout_alignParentTop="true"
	        		android:layout_width="50dip"
	        		android:layout_height="50dip"
		    		android:background="@drawable/zhixiang_lv"
		 	/>  
			 <TextView
		        android:text="@string/recycle_zhilei" 
		        android:layout_centerHorizontal="true"
		        android:layout_below="@id/zhi"
		        android:textSize="15sp"
		        android:textColor="#109200"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
		 	/> 
	 	</RelativeLayout>
	 	<RelativeLayout
	 	   android:id="@+id/dianziR"
           android:layout_width="0dp"
           android:layout_height="fill_parent"
           android:background="#F0F0F0"
           android:layout_weight="1" >
	        <ImageView
	        		android:id="@+id/dianzi"
	        		android:layout_centerHorizontal="true"
	        		android:layout_alignParentTop="true"
	        		android:layout_width="50dip"
	        		android:layout_height="50dip"
		    		android:background="@drawable/dianzi_lv"
		 	/>  
		 	<TextView
	        android:text="@string/recycle_dianzi" 
	        android:layout_centerHorizontal="true"
	        android:layout_below="@id/dianzi"
	        android:textSize="15sp"
	        android:textColor="#109200"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	 		/> 
	 	</RelativeLayout>
	   <RelativeLayout
	       android:id="@+id/jiadianR"
           android:layout_width="0dp"
           android:layout_height="fill_parent"
           android:background="#F0F0F0"
           android:layout_weight="1" >
		 	<ImageView
	        		android:id="@+id/jiadian"
	        		android:layout_centerHorizontal="true"
	        		android:layout_alignParentTop="true"
	        		android:layout_width="50dip"
		    		android:layout_height="50dip"
		    		android:background="@drawable/jiujiadian_lv"
		 	/>   
		  <TextView
	        android:text="@string/recycle_jiadian" 
	        android:layout_centerHorizontal="true"
	        android:layout_below="@id/jiadian"
	        android:textSize="15sp"
	        android:textColor="#109200"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	 		/> 
	 	</RelativeLayout>
       </LinearLayout>

  <Button
      android:id="@+id/yijianyuyue"
      android:layout_width="150dip"
      android:layout_height="50dip"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="40dip"
      android:background="@drawable/zhuce_queding"
      android:gravity="center"
      android:text="一键预约"
      android:textColor="#ffffff"
      android:textSize="18sp" />
</RelativeLayout>